feat: hottest search 및 카운트 증가 구현